--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,12 @@
 body {
   font-family: "Saira", sans-serif;
   font-weight: 400;
-  background-color: #ffffff;
+  background-color: #f1f1f1;
   color: #132f28;
+}
+
+h2 {
+  font-weight: 600;
 }
 
 a {
@@ -26,7 +30,6 @@ button {
 .container {
   max-width: 1140px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 /* Header */
@@ -61,7 +64,6 @@ nav a:hover {
   color: #1d9d74;
 }
 
-
 /* Seção Topo */
 .topo {
   display: grid;
@@ -76,14 +78,20 @@ nav a:hover {
 }
 
 .topo h1 {
-  font-family: "Saira", serif;
-  font-size: 70px;
-  line-height: 80px;
+  font-family: "DM Serif Display", serif;
+  font-size: 60px;
+  color: #043f07;
+  line-height: 70px;
   padding-bottom: 30px;
 }
 
 .topo p {
-  font-size: 18px;
+  font-size: 24px;
+  padding-bottom: 30px;
+}
+
+.app {
+  cursor: pointer;
 }
 
 /* Seção Sobre */
@@ -107,7 +115,7 @@ nav a:hover {
 
 /* Seção Produtos */
 .produtos {
-  padding: 50px 20px;
+  padding: 50px 0px;
   text-align: center;
 }
 
@@ -150,16 +158,51 @@ nav a:hover {
   color: #1d9d74;
 }
 
-
 .avaliacao i {
   color: #f1c40f;
 }
 
+/* Galeria */
+
+.galeria {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  max-height: 1000px;
+}
+
+.galeria-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.item {
+  overflow: hidden;
+}
+
+.foto-01 {
+  grid-column: 1/7;
+  grid-row: 1/4;
+}
+
+.foto-03 {
+  grid-column: 1/4;
+  grid-row: 4/7;
+}
+
+.foto-04 {
+  grid-column: 4/7;
+  grid-row: 4/7;
+}
+
 /* Produtos em Destaque */
+
 .produtos-destaque {
   text-align: center;
-  background-color: #f5f5f5;
-  padding: 50px 20px;
+
+  padding: 50px 0px;
 }
 
 .produtos-destaque h2 {
@@ -171,36 +214,53 @@ nav a:hover {
   background-color: #ffffff;
 }
 
-/* Seção Vasoplanta */
-.vasoplanta {
-  display: flex;
-  justify-content: space-between;
-  padding: 50px 20px;
-  flex-wrap: wrap;
+/* Page Detalhe */
+
+.detalhe-produto {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  max-width: 1140px;
+  margin: auto;
+  gap: 24px;
+  margin-bottom: 20px;
 }
 
-.vasoplanta img {
-  max-width: 600px;
+.detalhe-img1 img {
   width: 100%;
-  height: auto;
-  border-radius: 8px;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
-.vasoplanta .texto {
-  max-width: 500px;
+.detalhe-produto p {
+  padding-top: 30px;
 }
 
-.vasoplanta .texto h1 {
-  font-family: "Saira", serif;
-  font-size: 60px;
-  line-height: 60px;
-  padding-bottom: 30px;
+.divisoria {
+  max-width: 1140px;
+  margin: auto;
+  padding: 20px 0px;
+}
+.detalhe-mais {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  max-width: 1140px;
+  margin: auto;
+  gap: 24px;
+  padding-bottom: 60px;
+  justify-items: center;
+  text-align: center;
 }
 
-.vasoplanta .texto p {
-  font-size: 18px;
-  color: #808080;
-  margin-top: 15px;
+.detalhe-mais h3 {
+  padding-top: 15px;
+}
+
+.galeria-detalhe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 /* Seção Contato */
@@ -208,8 +268,14 @@ nav a:hover {
   padding: 50px 20px;
   background-color: #f5f5f5;
   display: flex;
-
   justify-content: space-between;
+}
+
+.form h2 {
+  margin-bottom: 10px;
+}
+.map h2 {
+  margin-bottom: 10px;
 }
 
 form input,
@@ -237,7 +303,7 @@ form button:hover {
 
 /* Rodapé */
 footer {
-  background-color: #ffffff;
+  background-color: #f1f1f1;
   padding: 20px 0;
   color: #132f28;
   text-align: center;
@@ -310,6 +376,11 @@ footer .social-media a:hover {
   .topo .left {
     max-width: 100%;
     text-align: center;
+  }
+
+  .topo h1 {
+    font-size: 40px;
+    line-height: 50px;
   }
 
   .produtos-lista .produto-card {
@@ -387,10 +458,6 @@ footer .social-media a:hover {
     align-items: center;
   }
 
-  .right img {
-    display: none;
-  }
-
   .produtos-lista {
     display: grid;
     grid-template-columns: 1fr;
@@ -399,15 +466,49 @@ footer .social-media a:hover {
     justify-items: center;
   }
 
-  .left h1 {
-    font-size: 40px;
+  .topo h1 {
+    font-size: 30px;
     line-height: 40px;
     padding-bottom: 10px;
+  }
+
+  .topo p {
+    font-size: 18px;
+    padding-bottom: 15px;
   }
 
   .vasoplanta .texto h1 {
     font-size: 40px;
     line-height: 40px;
     padding-bottom: 10px;
+  }
+
+  .detalhe-produto {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: 10px;
+    gap: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 10px 0px;
+  }
+
+  .divisoria {
+    text-align: center;
+  }
+
+  .detalhe-mais {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 10px;
+    gap: 24px;
+    padding-bottom: 60px;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .detalhe-mais h3 {
+    display: none;
   }
 }
