--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,12 +454,13 @@ footer .social-media a:hover {
   .topo {
     display: grid;
     grid-template-columns: 1fr;
-    align-items: stretch;
-    padding: 10px 0px;
+    grid-template-rows: repeat(2, 1fr);
+    align-items: start;
+    padding: 0px 0px;
   }
 
   .right img {
-    align-items: start;
+    padding: 0px 10px;
   }
 
   .produtos-lista {
@@ -479,12 +480,6 @@ footer .social-media a:hover {
   .topo p {
     font-size: 18px;
     padding-bottom: 50px;
-  }
-
-  .vasoplanta .texto h1 {
-    font-size: 40px;
-    line-height: 40px;
-    padding-bottom: 10px;
   }
 
   .detalhe-produto {
