--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,10 @@ button {
 /* Header */
 
 header {
-  max-width: 1140px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 32px 0px;
-  margin: auto;
+  background-color: #f1f1f1;
+  position: sticky;
+  top: 0px;
+  z-index: 1;
 }
 
 #logo img {
@@ -48,15 +46,22 @@ header {
 }
 
 nav {
-  display: flex;
-  align-items: center;
-  gap: 32px;
+  position: relative;
+  top: 0px;
+  max-width: 1140px;
+  margin: auto;
+  padding: 10px 0px;
+}
+nav ul {
+  background-color: #f1f1f1;
 }
 
 nav a {
   font-size: 16px;
+  font-weight: 500;
+  text-align: center;
   color: #132f28;
-  margin: 0 15px;
+  margin: 0 29px;
   transition: color 0.3s ease;
 }
 
@@ -201,13 +206,30 @@ nav a:hover {
 
 .produtos-destaque {
   text-align: center;
-
   padding: 50px 0px;
 }
 
 .produtos-destaque h2 {
   font-size: 32px;
   margin-bottom: 40px;
+}
+
+#destaque_p {
+  animation-name: color;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes color {
+  0% {
+    color: #f1f1f1;
+  }
+  50% {
+    color: #808080;
+  }
+  50% {
+    color: #043f07;
+  }
 }
 
 .produto-card.destaque {
@@ -281,7 +303,7 @@ nav a:hover {
 
 /* Seção Contato */
 .contato {
-  padding: 50px 20px;
+  padding: 50px 30px;
   background-color: #f5f5f5;
   display: flex;
   justify-content: space-between;
@@ -335,52 +357,18 @@ footer .social-media a:hover {
   color: white;
 }
 
-/* Menu Hamburger e Ícones */
-#openMenu {
-  display: none;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-#closeMenu {
-  display: none;
-}
-
 @media (max-width: 768px) {
-  header {
-    flex-direction: column;
-    padding: 20px;
+  nav {
+    padding: 0px 30px;
+  }
+
+  .container {
+    max-width: 700px;
+    margin: 0 auto;
   }
 
   #logo img {
     max-width: 120px;
-  }
-
-  nav {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 80px;
-    left: 0;
-    right: 0;
-    background-color: #fff;
-    padding: 15px;
-    gap: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-  }
-
-  nav.open {
-    display: flex;
-  }
-
-  #openMenu {
-    display: block;
-  }
-
-  nav a {
-    font-size: 18px;
-    margin: 10px 0;
   }
 
   .topo {
@@ -452,7 +440,7 @@ footer .social-media a:hover {
   .topo {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+
     gap: 24px;
     justify-items: center;
   }
@@ -467,9 +455,12 @@ footer .social-media a:hover {
 }
 
 @media (max-width: 425px) {
+  nav {
+    padding: 0px 15px;
+  }
+
   .topo {
     display: grid;
-    grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
     align-items: start;
     padding: 0px 0px;
